@@ -1692,9 +1692,7 @@ inline String str(unsigned long value)
 inline String str(double value)
 	{String temp(40, "%f", value); return temp;} 
 
-String str(FILE *fp, strsize_t size);
-
-String str(BufferProtocol& p, strsize_t size);
+String str(CharacterProtocol *p, strsize_t size);
 
 END_NAMESPACE
 
